traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: '=' expected but ';' found.
  while(x){
^