traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  var x == true
  while(x){
  while(!estFaceMur()){
    avance()
  }
  	if (estFaceMur()){
      if(getDirection() == Direction.est){
        gauche()
        avance()
        gauche()
      }else{
        droite()
        avance()
        droite()
      }
     	
    }else if(gtCouleurSol() == Color.red){
      x =false
    }
  }
  
}